Change for SBC7119S

--- a/rootfs-4.9.88-7119/usr/src/comportutil/app/comportutil.html
+++ b/rootfs-4.9.88-7119/usr/src/comportutil/app/comportutil.html
@@ -12,8 +12,7 @@
     <button id='RS422TERM' style="width:160px;height:25px;font-size:20px;"/>RS422TERM</button>
     <button id='RS485' style="width:160px;height:25px;font-size:20px;"/>RS485</button>
     <button id='RS485TERM' style="width:160px;height:25px;font-size:20px;"/>RS485TERM</button><br>
-    <select id="serialport"  style="width:160px;height:30px;font-size:20px;" disabled />
-	<option value="/dev/ttymxc0">/dev/ttymxc0</option>
+    <select id="serialport"  style="width:160px;height:30px;font-size:20px;" />
 	<option value="/dev/ttymxc1" selected>/dev/ttymxc1</option>
 	<option value="/dev/ttymxc2">/dev/ttymxc2</option>
 	<option value="/dev/ttymxc3">/dev/ttymxc3</option>
