--- a/rootfs-4.9.88-7119/usr/src/burnin/app/burnin.html
+++ b/rootfs-4.9.88-7119/usr/src/burnin/app/burnin.html
@@ -10,6 +10,9 @@
     <button id='StopRun' style="width:200px;height:30px;font-size:20px;">CPU STOP</button>
     <br><input id='temperature' type='text'  style="width:200px;height:30px;font-size:25px;"/>
     <input id='cpu-usage' type='text' style="width:200px;height:30px;font-size:25px;" />
+    <input id='envtemp' type='text' style="width:200px;height:30px;font-size:25px;" />
+    <input id='envhumi' type='text' style="width:200px;height:30px;font-size:25px;" />
+    <input id='envlux' type='text' style="width:200px;height:30px;font-size:25px;" />
     <input id='status' type='hidden' />
    <div id='response'></div>
   </body>
