--- a/rootfs-4.9.88-7119/usr/src/hardware/app/hardware.html
+++ b/rootfs-4.9.88-7119/usr/src/hardware/app/hardware.html
@@ -81,7 +81,15 @@
   <table id="hardwaretable">
   </table>
 <div>
-
+<hr/>
+<!--
+<h2 id="extension-test">Extension Test</h2>
+<div>
+<div>
+  <table id="extensiontable">
+  </table>
+<div>
+-->
 <h1>
     <button id='connect-button'  style="width:200px;height:40px;font-size:25px;">Connect</button>
 </h1>
