--- a/rootfs-4.9.88/usr/src/datetime/app/datetime.html
+++ b/rootfs-4.9.88/usr/src/datetime/app/datetime.html
@@ -12,18 +12,18 @@
   <body>
     <button id='connect-button'>Connect</button>
 <h1>
-    <label id="showtitle">Date and Time Setup</label>
+    <label id="showtitle">Date and Time Setup :</label>
 </h1>
   <h2>
     <label id="Manual">Manual Setup:</label></br>
-    <input type="date" id="myDate" value="2018-01-01" style="width:200px;height:25px;font-size:20px;">
-    <input type="time" id="myTime" value="01:01" style="width:200px;height:25px;font-size:20px;">
-    <button id='send-message-button' style="width:200px;height:25px;font-size:20px;">Set date&time</button>
+    <input type="date" id="myDate" value="2018-01-01" style="width:200px;height:30px;font-size:20px;">
+    <input type="time" id="myTime" value="01:01" style="width:200px;height:30px;font-size:20px;">
+    <button id='send-message-button' style="width:200px;height:30px;font-size:20px;">Set date&time</button>
     </br><label id="autosetup">Auto Setup:</label></br>
-    <button id='set-ntp-yes'  style="width:200px;height:25px;font-size:20px;">Connect ntp server</button>
+    <button id='set-ntp-yes'  style="width:200px;height:30px;font-size:20px;">Connect ntp server</button>
     </br><label id="timezonesetup">Timezone Setup:</label></br>
  <form>
-     <select id="timezonelist"  style="width:450px;height:20px;font-size:16px;">
+     <select id="timezonelist"  style="width:450px;height:30px;font-size:20px;">
 	<option value="-1200">(GMT -12:00) Eniwetok, Kwajalein</option>
 	<option value="-1100">(GMT -11:00) Midway Island, Samoa</option>
 	<option value="-1000">(GMT -10:00) Hawaii</option>
@@ -53,7 +53,9 @@
 	<option value="+1400">(GMT +14:00) Line Islands, Tokelau</option>
       </select>
 </form>
-    <button id='settimezone'  style="width:200px;height:25px;font-size:20px;">Set timezone</button>
+    <button id='settimezone'  style="width:200px;height:30px;font-size:20px;">Set timezone</button>
+    <br><button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
    </h2>
    <div id='response'></div>
   </body>
