--- a/rootfs-4.9.88/usr/src/eetitool/app/eetitool.html
+++ b/rootfs-4.9.88/usr/src/eetitool/app/eetitool.html
@@ -38,9 +38,11 @@
     <br>
     <button id='settouchparameter'  style="width:200px;height:32px;font-size:28px;">Set option</button>
     <button id='canvasclear'  style="width:200px;height:32px;font-size:28px;">Clear draw</button>
-    <canvas id="mycanvas" width="800" height="450" style="border:1px solid #000000;">
+    <canvas id="mycanvas" width="800" height="400" style="border:1px solid #000000;">
         Your browser does not support the HTML5 canvas tag.
     </canvas>
+    <button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
    <div id='response'></div>
   </body>
 </html>
