--- a/rootfs-4.9.88/usr/src/network/app/network.html
+++ b/rootfs-4.9.88/usr/src/network/app/network.html
@@ -9,7 +9,7 @@
     <script src='./network.js'></script>
   </head>
   <body>
-<h0>
+    <label id="showtitle" style="width:200px;height:40px;font-size:25px;">Network setup :</label>
     <button id='connect-button'>Connect</button><br>
     <label id="showipaddr" >Ipaddress: <input type="text" id="ipaddr" name="ipaddr" value="" style="width:160px;height:24px;font-size:20px;"/></label>
     <label id="shownetmask">Netmask: <input type="text" id="netmask" name="netmask" value="" style="width:160px;height:24px;font-size:20px;"/></label>
@@ -18,22 +18,18 @@
     <label id="showType">Type:
     <input type="radio" id="manual" name="manual" style="width:40px;height:24px;font-size:20px;">Static IP
     <input type="radio" id="dhcp" name="dhcp" style="width:40px;height:24px;font-size:20px;">DHCP</label>
-</h0>
-<h1>
-    <button id='send-message-button' style="width:160px;height:30px;font-size:20px;">Setup</button>
-</h1>
-<h0>
+    <button id='send-message-button' style="width:200px;height:30px;font-size:20px;">Apply</button>
     <label id="ProxyType">Proxy type:
     <input type="radio" id="proxydirect" name="proxydirect" style="width:40px;height:24px;font-size:16px;">direct
 <!--
     <input type="radio" id="proxyauto" name="proxyauto" style="width:40px;height:24px;font-size:16px;">auto
 -->
-    <input type="radio" id="proxymanual" name="proxymanual" style="width:40px;height:24px;font-size:16px;">manual</label>
-    <label id="showproxy">Proxy: <input type="text" id="proxyserver" name="proxyserver" value="" style="width:320px;height:24px;font-size:20px;"/> example:http://httpproxy.example.com</label>
-</h0>
-<h1>
-    <button id='proxysetup' style="width:160px;height:30px;font-size:20px;">PROXY-Setup</button>
-</h1>
+    <input type="radio" id="proxymanual" name="proxymanual" style="width:40px;height:30px;font-size:20px;">manual</label>
+    <label id="showproxy">Proxy: <input type="text" id="proxyserver" name="proxyserver" value="" style="width:320px;height:30px;font-size:20px;"/> example:http://httpproxy.example.com</label>
+    <button id='proxysetup' style="width:200px;height:30px;font-size:20px;">PROXY-Setup</button>
+    <br><br>
+    <button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
     <div id='response'></div><br>
   </body>
 </html>
