--- a/rootfs-4.9.88/usr/src/report/app/report.html
+++ b/rootfs-4.9.88/usr/src/report/app/report.html
@@ -38,6 +38,8 @@
     <label id="FTPServerlabel" style="width:200px;height:32px;font-size:25px;">FTP Server :</label>
     <input id='FTPServer' type='text' value="192.168.20.185" style="width:200px;height:32px;font-size:20px;" />
     <button id='Sendtoftp'  style="width:200px;height:32px;font-size:20px;"/>Send to FTP</button>
+    <br><button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
     <div id='response'></div>
   </body>
 </html>
