--- a/rootfs-4.9.88/usr/src/burnin/app/burnin.html
+++ b/rootfs-4.9.88/usr/src/burnin/app/burnin.html
@@ -10,6 +10,8 @@
     <button id='StopRun' style="width:200px;height:40px;font-size:25px;">CPU STOP</button>
     <br><input id='temperature' type='text'  style="width:200px;height:40px;font-size:25px;"/>
     <input id='cpu-usage' type='text' style="width:200px;height:40px;font-size:25px;" />
+    <br><button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
     <input id='status' type='hidden' />
 </h1>
     <div id='response'></div>
