--- a/rootfs-4.9.88/usr/src/comportutil/app/comportutil.html
+++ b/rootfs-4.9.88/usr/src/comportutil/app/comportutil.html
@@ -34,6 +34,8 @@
     <button id='Comportsendstop'  style="width:160px;height:25px;font-size:20px;"/>Autosend stop</button>
     <button id='clearlog'  style="width:160px;height:25px;font-size:20px;"/>Clear log</button>
     <textarea id="showoutput" maxlength="2048" style="width:610px;height:300px;font-size:16px;" readonly /></textarea>
+    <button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
     <div id='response'></div>
     <input id='Opentype' type='hidden' value=0 />
     <input id='Comporttype' type='hidden'  value='RS232' />
