--- a/rootfs-4.9.88/usr/src/hardware/app/hardware.html
+++ b/rootfs-4.9.88/usr/src/hardware/app/hardware.html
@@ -45,6 +45,7 @@
         <div class="section">
           <h1 id="welcome-to-arm-settings">Welcome to ARM-Settings</h1>
           <p>This Page just for ARM machine Hardware Test.</p>
+                <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
           <hr/>
 <h2 id="base-infomation">Base Infomation</h2>
 <table id="basetable">
