--- a/rootfs-4.9.88/usr/src/onoff/app/onoff.html
+++ b/rootfs-4.9.88/usr/src/onoff/app/onoff.html
@@ -9,6 +9,8 @@
     <button id='StartRun' style="width:200px;height:40px;font-size:25px;">ON-OFF START</button>
     <button id='StopRun' style="width:200px;height:40px;font-size:25px;">ON-OFF STOP</button>
     <br><input id='onoffcounter' type='text'  style="width:200px;height:40px;font-size:25px;"/>
+    <button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
     <input id='status' type='hidden' />
 </h1>
     <div id='response'></div>
