--- a/rootfs-4.9.88/usr/src/userchange/app/userchange.html
+++ b/rootfs-4.9.88/usr/src/userchange/app/userchange.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <button id='connect-button'>Connect</button>
-    <label id="usertitle" style="width:400px;height:40px;font-size:32px;">Set user password</label>
+    <label id="usertitle" style="width:400px;height:40px;font-size:32px;">Set user password :</label>
     <label id="labeluserpasswd" >Input old  password: 
         <input id='userpasswd' type='password' style="width:200px;height:25px;font-size:20px;">
     </label>
@@ -22,7 +22,7 @@
       <input id='checkuserpasswd' type='password' style="width:200px;height:25px;font-size:20px;">
     </label>
     <button id='setuserpasswd' style="width:200px;height:30px;font-size:20px;">Set user password</button>
-    <label id="roottitle"  style="width:400px;height:40px;font-size:32px;">Set root password</label>
+    <label id="roottitle"  style="width:400px;height:40px;font-size:32px;">Set root password :</label>
     <label id="labelrootpasswd" >Input old password: 
       <input id='rootpasswd' type='password' style="width:200px;height:25px;font-size:20px;">
     </label>
@@ -33,6 +33,8 @@
       <input id='checkrootpasswd' type='password' style="width:200px;height:25px;font-size:20px;">
     </label>
     <button id='setrootpasswd' style="width:200px;height:30px;font-size:20px;">Set root password</button>
+    <button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
     <div id='response'></div>
   </body>
 </html>
