--- a/rootfs-4.9.88/usr/src/webbrowser/app/webbrowser.html
+++ b/rootfs-4.9.88/usr/src/webbrowser/app/webbrowser.html
@@ -11,6 +11,8 @@
     <br><input type="radio" id="Chromium" name="Chromium" style="width:100px;height:24px;font-size:20px;">Chromium
     <br><input type="radio" id="Firefox" name="Firefox" style="width:100px;height:24px;font-size:20px;">Firefox</label>
     <label id="showsetup"><br><br><br><br><br><br><button id='apply' style="width:200px;height:40px;font-size:25px;">Apply</button></label>
+    <br><button id='homepage' style="width:200px;height:30px;font-size:20px;">Homepage</button>
+    <button id='setup' style="width:200px;height:30px;font-size:20px;">Setup</button>
     <input id='status' type='hidden' />
     <div id='response'></div>
   </body>
