modify matchbox-keyboard bug.

--- a/rootfs-4.9.88/usr/src/eetitool/app/eetitool.html
+++ b/rootfs-4.9.88/usr/src/eetitool/app/eetitool.html
@@ -4,11 +4,11 @@
     <script src='./eetitool.js'></script>
   </head>
   <body>
-    <label id="showtitle" style="width:200px;height:35px;font-size:30px;">EETI touch tool</label>
+    <label id="showtitle" style="width:250px;height:40px;font-size:30px;">EETI touch tool :</label>
     <button id='connect-button'>Connect</button>
     <br>
-    <label id="showmaxreportpoint"   style="width:300px;height:30px;font-size:24px;">Set max. report point :</label>
-    <select id="maxreportpointvalue"  style="width:100px;height:28px;font-size:20px;">
+    <label id="showmaxreportpoint"   style="width:250px;height:30px;font-size:20px;">Set max. report point :</label>
+    <select id="maxreportpointvalue"  style="width:100px;height:30px;font-size:20px;">
 	<option value="1">1</option>
 	<option value="2">2</option>
 	<option value="3">3</option>
@@ -21,7 +21,7 @@
 	<option value="10">10</option>
      </select>
     <br>
-    <label id="showsensitivitylevel"   style="width:300px;height:30px;font-size:24px;" />Set sensitivity level :</label>
+    <label id="showsensitivitylevel"   style="width:250px;height:30px;font-size:20px;" />Set sensitivity level :</label>
     <select id="sensitivitylevelvalue"  style="width:100px;height:28px;font-size:20px;" />
 	<option value="-5">-5</option>
 	<option value="-4">-4</option>
@@ -36,8 +36,8 @@
 	<option value="5">5</option>
      </select>
     <br>
-    <button id='settouchparameter'  style="width:200px;height:32px;font-size:28px;">Set option</button>
-    <button id='canvasclear'  style="width:200px;height:32px;font-size:28px;">Clear draw</button>
+    <button id='settouchparameter'  style="width:200px;height:30px;font-size:20px;">Apply</button>
+    <button id='canvasclear'  style="width:200px;height:30px;font-size:20px;">Clear draw</button>
     <canvas id="mycanvas" width="800" height="400" style="border:1px solid #000000;">
         Your browser does not support the HTML5 canvas tag.
     </canvas>
