--- a/rootfs-4.9.88/usr/src/setup/app/setup.html
+++ b/rootfs-4.9.88/usr/src/setup/app/setup.html
@@ -4,9 +4,9 @@
    <script src='./setup.js'></script>
   </head>
   <body>
-    <label id="showtitle" style="width:200px;height:40px;font-size:30px;">System setup :<br></label>
+    <label id="showtitle" style="width:200px;height:40px;font-size:30px;">System Setup :<br></label>
     <button id='connect-button'  style="width:200px;height:30px;font-size:25px;">Connect</button>
-    <label id="showversion" style=font-size:20px>Filesystem build date:
+    <label id="showversion" style=font-size:20px>File System Build Date:
       <input type="text" id="version" name="version" value="" style="width:200px;height:30px;font-size:20px;" disabled/>
     </label>
     <label id="labelusername" style=font-size:20px>username: 
@@ -29,8 +29,8 @@
 
     <br><br><button id='chromiumexit' style="width:250px;height:30px;font-size:20px;">Kiosk Mode Exit</button>
     <button id='usbstorage' style="width:250px;height:30px;font-size:20px;">USB storage</button>
-    <br><br><button id='desktoprestart' style="width:250px;height:30px;font-size:20px;">Desktop restart</button>
-    <button id='systemreboot' style="width:250px;height:30px;font-size:20px;">System reboot</button>
+    <br><br><button id='desktoprestart' style="width:250px;height:30px;font-size:20px;">Desktop Restart</button>
+    <button id='systemreboot' style="width:250px;height:30px;font-size:20px;">System Reboot</button>
     <br><br><button id='sshdsocket' style="width:250px;height:30px;font-size:20px;">ssh.socket</button>
     <input id='status' type='hidden' />
     <div id='response'></div>
